--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" target="_blank" href="https://sk-badsha.github.io/PortfolioBadsha/#contactme">Contact Me</a>
                 </li>
+
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -38,6 +39,7 @@
             </form>
         </div>
     </nav>
+    
     <div class="con-1">
         <div class="jumbotron">
             <h1 class="display-4">Welcome to POSTAL API</h1>
@@ -87,6 +89,7 @@
         </div>
         <div id="pindetails" class="row">
         </div>
+
         <script src="script.js"></script>
         <!-- MDB -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
