--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://sk-badsha.github.io/PortfolioBadsha/#contactme">Contact Me</a>
+                    <a class="nav-link" target="_blank"
+                        href="https://sk-badsha.github.io/PortfolioBadsha/#contactme">Contact Me</a>
                 </li>
 
 
@@ -39,7 +40,7 @@
             </form>
         </div>
     </nav>
-    
+
     <div class="con-1">
         <div class="jumbotron">
             <h1 class="display-4">Welcome to POSTAL API</h1>
